- Complete Button overhaul - Implemented a scroll view in a constraint view page for the Account Page

--- a/app/src/main/res/layout/activity_app_settings_page.xml
+++ b/app/src/main/res/layout/activity_app_settings_page.xml
@@ -24,11 +24,12 @@
 
     <TextView
         android:id="@+id/backArrow2"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/left_arrow"
+        android:foreground="@drawable/ripple"
         android:onClick="settingsPage"
         app:itemRippleColor="#C1C1C1"
         app:layout_constraintStart_toStartOf="parent"
