--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,11 +39,12 @@
         android:layout_marginEnd="50dp"
         android:background="#CCFFFFFF"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="#808080"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,11 +58,12 @@
         android:layout_marginEnd="50dp"
         android:background="#CCFFFFFF"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="#808080"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
@@ -84,17 +86,19 @@
 
     <Button
         android:id="@+id/createButton"
-        android:layout_width="280dp"
+        android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="60dp"
         android:background="#00FFFFFF"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
+        android:foreground="@drawable/ripple_grayc1c1"
         android:onClick="createAccountButton"
         android:text="Click here to create an account"
         android:textColor="#E8E0E0"
-        android:textSize="10dp"
+        android:textSize="10sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,31 +106,43 @@
 
     <Button
         android:id="@+id/forgotPassword"
-        android:layout_width="169dp"
+        android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="60dp"
         android:background="#00FFFFFF"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
         android:text="Forgot Password?"
         android:textColor="#FFC107"
         android:textSize="10dp"
+        android:foreground="@drawable/ripple_grayc1c1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/createButton" />
 
-    <ImageView
+    <Button
         android:id="@+id/loginButton"
-        android:layout_width="170dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="40dp"
+        android:fontFamily="@font/sofia_regular"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginTop="55dp"
+        android:background="@drawable/profile_page_all_curved_corners_red"
+        android:letterSpacing="0.25"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingEnd="0dp"
+        android:paddingBottom="0dp"
+        android:text="  Login  "
+        android:textColor="#FFFFFF"
+        android:foreground="@drawable/ripple_grayc1c1"
+        app:backgroundTint="@color/red_ec"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:srcCompat="@drawable/loginbutton" />
+        app:layout_constraintTop_toBottomOf="@+id/password"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
