--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -160,13 +160,13 @@
 
     <TextView
         android:id="@+id/TopMessage2"
-        android:layout_width="418dp"
+        android:layout_width="0dp"
         android:layout_height="26dp"
         android:layout_marginEnd="-1dp"
         android:background="@drawable/profile_page_top_curved_box"
         android:fontFamily="@font/sofia_regular"
         android:letterSpacing="0.25"
-        android:text="Edit Your Personal Information"
+        android:text="Edit Your Information"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="16sp"
