--- a/app/src/main/res/layout/activity_setting_page.xml
+++ b/app/src/main/res/layout/activity_setting_page.xml
@@ -26,7 +26,7 @@
         android:id="@+id/profileName"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
         android:hint="Full Name"
         android:paddingStart="30dp"
         android:paddingTop="10dp"
@@ -41,7 +41,7 @@
         android:id="@+id/profileEmail"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
         android:hint="Email Address"
         android:paddingStart="30dp"
         android:paddingTop="10dp"
@@ -67,7 +67,7 @@
 
     <TextView
         android:id="@+id/topMessage"
-        android:layout_width="418dp"
+        android:layout_width="0dp"
         android:layout_height="26dp"
         android:background="@drawable/profile_page_top_curved_box"
         android:fontFamily="@font/sofia_regular"
@@ -256,9 +256,10 @@
                 android:id="@+id/profile_button"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/settings_page_all_gray_curved_corners"
                 android:fontFamily="@font/sofia_regular"
+                android:foreground="@drawable/ripple"
                 android:letterSpacing="0.5"
                 android:onClick="profileButton"
                 android:paddingStart="20dp"
@@ -267,7 +268,6 @@
                 android:textAlignment="viewStart"
                 android:textColor="#000000"
                 android:textStyle="bold"
-                android:foreground="@drawable/ripple"
                 app:backgroundTint="@color/c1c1_gray"
                 app:itemRippleColor="@color/black"
                 app:layout_constraintEnd_toEndOf="@+id/cvLayout"
