- Added a "Splash Screen" / loading page for a better user experience.   - Added a better loading screen
- IMPORTANT NOTICE:
    - Be aware, if you do not follow the basic guidelines for the current page format, your page will  crash. The crash would most likely be caused by if you did not ass this line of code
        setTheme(R.style.Theme_Carolina_Coffee);
- IMPORTANT NOTICE:

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,7 +19,7 @@
     <style name="splashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@drawable/splash_image</item>
-        <item name="android:statusBarColor">@color/red_ec</item>
+        <item name="android:statusBarColor">@color/iconGray</item>
     </style>
 
 </resources>
