--- a/app/src/main/res/drawable/ic_logo.xml
+++ b/app/src/main/res/drawable/ic_logo.xml
@@ -1,30 +1,15 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="512dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
-  <path
-      android:pathData="M210,185.6c-9.8,1.6 -14.5,3.1 -22,6.6 -7,3.3 -10,5.6 -17,12.7 -13.6,13.7 -19,26.9 -19,46.6 0,18.6 5.4,32.4 17.6,45.4 8.3,8.8 16.5,14.1 27.9,17.8 6.7,2.2 9.8,2.6 19.5,2.6 9.7,-0 12.7,-0.4 19.5,-2.7 4.4,-1.4 10.3,-3.9 13,-5.5 5.1,-2.9 15.5,-11.7 15.5,-13 0,-0.5 -2.7,-3.2 -6,-6l-6.1,-5.3 -4.2,4c-11.9,10.8 -27.5,14.7 -43.2,10.7 -23.8,-6.2 -39.9,-30.2 -36.5,-54.3 2.8,-20.2 15.7,-35.7 34.1,-41.3 5.8,-1.8 8.8,-2.1 16.4,-1.7 8.1,0.4 10.4,1 16.8,4.1 4.1,1.9 9.3,5.1 11.5,7.1 2.1,2 4.3,3.6 4.7,3.6 0.4,-0 3.3,-2.1 6.4,-4.7 3.1,-2.6 5.8,-4.8 6,-5 1,-0.7 -5.8,-6.7 -12.7,-11.4 -4.3,-2.8 -10.5,-5.8 -15.1,-7.3 -7.5,-2.4 -21.6,-3.9 -27.1,-3z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M217.6,220.6c-6,2.2 -10.1,5.8 -13,11.6 -5.6,11.1 -1.8,21.1 6.8,17.8 2.6,-1 3.9,-3.1 5.1,-8.3 0.9,-4.3 4.8,-7.7 8.7,-7.7 5,-0 7.6,2.4 9.4,8.5 1.6,5.7 3.5,7.5 7.8,7.5 6.7,-0 8.6,-8.5 4,-17.8 -5.3,-10.7 -17.7,-15.7 -28.8,-11.6z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M368,219.9c-10.4,3.4 -16.9,11.5 -17.3,21.7 -0.2,5.3 2.3,8.4 6.9,8.4 3.8,-0 7.4,-3.8 7.4,-7.7 0,-3.6 5.1,-8.3 9,-8.3 5.1,-0 7.8,2.5 9.6,9 1.7,6.2 4.6,8.7 8.8,7.4 4.1,-1.2 5.6,-3.5 5.6,-8.3 -0.1,-8.4 -5.6,-16.8 -13.7,-20.6 -4.2,-2.1 -12.5,-2.9 -16.3,-1.6z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M59.3,304.4c-1.4,2 -4,7.9 -5.8,13.1 -0.9,2.7 -2,5.9 -2.5,7 -0.4,1.1 -1.1,2.8 -1.4,3.7 -0.3,1 -1.4,1.8 -2.4,1.8 -1,-0 -2.7,0.9 -3.8,2.1 -1.6,1.8 -2,4 -2.2,14.6 -0.4,13.9 -0.3,14.3 5.8,14.3 2.9,-0 3.5,0.4 3.6,2.2 0.1,1.3 0.5,5.6 0.9,9.6 0.8,7 0.7,7.3 -1.4,7.9 -2.5,0.6 -2.5,0.4 -0.1,34.8 0.5,7.1 1.2,20 1.6,28.7 0.4,8.6 1,16.2 1.4,16.9 0.7,1 11.8,1.4 50.3,1.8 27.3,0.3 49.9,0.9 50.3,1.3 1.3,1.3 -1.5,31.7 -3.2,35.3 -3,6.3 -3.9,6.4 -42.9,5.8 -26.1,-0.4 -35.7,-0.9 -37.6,-1.9 -4.2,-2.1 -5.7,-6.8 -6.6,-20 -0.7,-10.5 -1,-11.9 -2.7,-12.2 -1,-0.2 -2.2,0.2 -2.7,0.9 -1.3,2.2 -0.1,24.4 1.6,28.5 2,4.7 6.9,9.2 10.9,9.9 1.7,0.3 19.8,0.6 40.1,0.8 36.9,0.2 37,0.2 40.1,-2 6,-4.3 7.7,-9.8 8.5,-28.3 0.5,-9.9 1.3,-16.6 1.9,-16.8 3.2,-1.1 3.7,-3.5 5,-22.4 2,-28.3 2,-29.2 -0.8,-29.6 -1.2,-0.2 -2.4,0.3 -2.6,1 -0.5,1.2 -3.6,38.6 -3.6,42.3 0,1.7 -2.3,1.8 -50.2,1.1 -27.7,-0.4 -50.4,-0.9 -50.5,-1 -0.4,-0.4 -4.1,-68.1 -3.8,-68.4 0.1,-0.2 24.9,-0 55,0.4l54.7,0.7 -0.4,6.5c-0.2,5.3 0,6.7 1.4,7.6 3,1.8 4.1,-0.7 4.6,-10 0.4,-7.5 0.2,-8.9 -1.3,-10 -1.5,-1.2 -1.7,-2.4 -1,-10.8l0.7,-9.5 4.6,-0.3 4.7,-0.3 0.3,-12.3c0.3,-13.4 -0.4,-15.8 -4.8,-17.3 -2.4,-0.9 -3.2,-2.2 -5.7,-10.2l-3,-9.2 -5.4,-0.7c-6.1,-0.8 -34.8,-3.2 -58.3,-4.9 -13.4,-1 -16.1,-1 -17,0.2 -1.4,1.8 -8.6,1.3 -8.6,-0.6 0,-0.8 -1.4,-1.6 -3.2,-1.9 -8.4,-1.3 -11.8,-1.3 -12.5,-0.2zM147.8,362l14.2,-0 0,4.7c0,2.7 -0.3,7.1 -0.6,10l-0.7,5.2 -51.1,-0.6c-28.1,-0.3 -51.2,-0.6 -51.3,-0.7 -0.1,-0.1 -0.5,-4.6 -0.9,-10l-0.7,-9.9 38.4,0.6c21.1,0.4 44.8,0.7 52.7,0.7z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M279.5,350.2c-0.3,0.7 -1.1,3.2 -1.9,5.4l-1.4,4.2 5.1,2.8c5,2.8 5.8,2.9 20.5,3.2 15.8,0.4 21.9,-0.6 27.7,-4.4l2.2,-1.5 -2,-5.4 -2,-5.4 -3.1,1.7c-2.4,1.3 -6.4,1.8 -18.8,2 -14.1,0.3 -16.1,0.2 -20.3,-1.7 -5.6,-2.5 -5.4,-2.4 -6,-0.9z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M101,400.9c-6.7,3.6 -10,10.7 -10,21.6 0,8.4 1.5,12.9 5.8,17.4 7,7.3 16.7,7.5 23.8,0.5 4.7,-4.8 5.4,-6.9 5.6,-18.4 0.1,-9 -0.1,-10.1 -2.6,-14.4 -4.7,-8 -14.6,-10.9 -22.6,-6.7zM102.2,411c-0.3,3.2 0.4,5.8 3.2,11.5 3.8,7.8 4.2,9.8 2.7,13.9 -1.8,4.7 -8.5,0.1 -10.1,-7 -1.2,-5.3 -0.1,-15.8 2.1,-19.4 1,-1.6 2,-3 2.2,-3 0.1,-0 0.1,1.8 -0.1,4z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+<vector android:height="55dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="55dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#000000"
+        android:pathData="M210,185.6c-9.8,1.6 -14.5,3.1 -22,6.6 -7,3.3 -10,5.6 -17,12.7 -13.6,13.7 -19,26.9 -19,46.6 0,18.6 5.4,32.4 17.6,45.4 8.3,8.8 16.5,14.1 27.9,17.8 6.7,2.2 9.8,2.6 19.5,2.6 9.7,-0 12.7,-0.4 19.5,-2.7 4.4,-1.4 10.3,-3.9 13,-5.5 5.1,-2.9 15.5,-11.7 15.5,-13 0,-0.5 -2.7,-3.2 -6,-6l-6.1,-5.3 -4.2,4c-11.9,10.8 -27.5,14.7 -43.2,10.7 -23.8,-6.2 -39.9,-30.2 -36.5,-54.3 2.8,-20.2 15.7,-35.7 34.1,-41.3 5.8,-1.8 8.8,-2.1 16.4,-1.7 8.1,0.4 10.4,1 16.8,4.1 4.1,1.9 9.3,5.1 11.5,7.1 2.1,2 4.3,3.6 4.7,3.6 0.4,-0 3.3,-2.1 6.4,-4.7 3.1,-2.6 5.8,-4.8 6,-5 1,-0.7 -5.8,-6.7 -12.7,-11.4 -4.3,-2.8 -10.5,-5.8 -15.1,-7.3 -7.5,-2.4 -21.6,-3.9 -27.1,-3z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#000000"
+        android:pathData="M217.6,220.6c-6,2.2 -10.1,5.8 -13,11.6 -5.6,11.1 -1.8,21.1 6.8,17.8 2.6,-1 3.9,-3.1 5.1,-8.3 0.9,-4.3 4.8,-7.7 8.7,-7.7 5,-0 7.6,2.4 9.4,8.5 1.6,5.7 3.5,7.5 7.8,7.5 6.7,-0 8.6,-8.5 4,-17.8 -5.3,-10.7 -17.7,-15.7 -28.8,-11.6z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#000000"
+        android:pathData="M368,219.9c-10.4,3.4 -16.9,11.5 -17.3,21.7 -0.2,5.3 2.3,8.4 6.9,8.4 3.8,-0 7.4,-3.8 7.4,-7.7 0,-3.6 5.1,-8.3 9,-8.3 5.1,-0 7.8,2.5 9.6,9 1.7,6.2 4.6,8.7 8.8,7.4 4.1,-1.2 5.6,-3.5 5.6,-8.3 -0.1,-8.4 -5.6,-16.8 -13.7,-20.6 -4.2,-2.1 -12.5,-2.9 -16.3,-1.6z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#000000"
+        android:pathData="M59.3,304.4c-1.4,2 -4,7.9 -5.8,13.1 -0.9,2.7 -2,5.9 -2.5,7 -0.4,1.1 -1.1,2.8 -1.4,3.7 -0.3,1 -1.4,1.8 -2.4,1.8 -1,-0 -2.7,0.9 -3.8,2.1 -1.6,1.8 -2,4 -2.2,14.6 -0.4,13.9 -0.3,14.3 5.8,14.3 2.9,-0 3.5,0.4 3.6,2.2 0.1,1.3 0.5,5.6 0.9,9.6 0.8,7 0.7,7.3 -1.4,7.9 -2.5,0.6 -2.5,0.4 -0.1,34.8 0.5,7.1 1.2,20 1.6,28.7 0.4,8.6 1,16.2 1.4,16.9 0.7,1 11.8,1.4 50.3,1.8 27.3,0.3 49.9,0.9 50.3,1.3 1.3,1.3 -1.5,31.7 -3.2,35.3 -3,6.3 -3.9,6.4 -42.9,5.8 -26.1,-0.4 -35.7,-0.9 -37.6,-1.9 -4.2,-2.1 -5.7,-6.8 -6.6,-20 -0.7,-10.5 -1,-11.9 -2.7,-12.2 -1,-0.2 -2.2,0.2 -2.7,0.9 -1.3,2.2 -0.1,24.4 1.6,28.5 2,4.7 6.9,9.2 10.9,9.9 1.7,0.3 19.8,0.6 40.1,0.8 36.9,0.2 37,0.2 40.1,-2 6,-4.3 7.7,-9.8 8.5,-28.3 0.5,-9.9 1.3,-16.6 1.9,-16.8 3.2,-1.1 3.7,-3.5 5,-22.4 2,-28.3 2,-29.2 -0.8,-29.6 -1.2,-0.2 -2.4,0.3 -2.6,1 -0.5,1.2 -3.6,38.6 -3.6,42.3 0,1.7 -2.3,1.8 -50.2,1.1 -27.7,-0.4 -50.4,-0.9 -50.5,-1 -0.4,-0.4 -4.1,-68.1 -3.8,-68.4 0.1,-0.2 24.9,-0 55,0.4l54.7,0.7 -0.4,6.5c-0.2,5.3 0,6.7 1.4,7.6 3,1.8 4.1,-0.7 4.6,-10 0.4,-7.5 0.2,-8.9 -1.3,-10 -1.5,-1.2 -1.7,-2.4 -1,-10.8l0.7,-9.5 4.6,-0.3 4.7,-0.3 0.3,-12.3c0.3,-13.4 -0.4,-15.8 -4.8,-17.3 -2.4,-0.9 -3.2,-2.2 -5.7,-10.2l-3,-9.2 -5.4,-0.7c-6.1,-0.8 -34.8,-3.2 -58.3,-4.9 -13.4,-1 -16.1,-1 -17,0.2 -1.4,1.8 -8.6,1.3 -8.6,-0.6 0,-0.8 -1.4,-1.6 -3.2,-1.9 -8.4,-1.3 -11.8,-1.3 -12.5,-0.2zM147.8,362l14.2,-0 0,4.7c0,2.7 -0.3,7.1 -0.6,10l-0.7,5.2 -51.1,-0.6c-28.1,-0.3 -51.2,-0.6 -51.3,-0.7 -0.1,-0.1 -0.5,-4.6 -0.9,-10l-0.7,-9.9 38.4,0.6c21.1,0.4 44.8,0.7 52.7,0.7z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#000000"
+        android:pathData="M279.5,350.2c-0.3,0.7 -1.1,3.2 -1.9,5.4l-1.4,4.2 5.1,2.8c5,2.8 5.8,2.9 20.5,3.2 15.8,0.4 21.9,-0.6 27.7,-4.4l2.2,-1.5 -2,-5.4 -2,-5.4 -3.1,1.7c-2.4,1.3 -6.4,1.8 -18.8,2 -14.1,0.3 -16.1,0.2 -20.3,-1.7 -5.6,-2.5 -5.4,-2.4 -6,-0.9z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#000000"
+        android:pathData="M101,400.9c-6.7,3.6 -10,10.7 -10,21.6 0,8.4 1.5,12.9 5.8,17.4 7,7.3 16.7,7.5 23.8,0.5 4.7,-4.8 5.4,-6.9 5.6,-18.4 0.1,-9 -0.1,-10.1 -2.6,-14.4 -4.7,-8 -14.6,-10.9 -22.6,-6.7zM102.2,411c-0.3,3.2 0.4,5.8 3.2,11.5 3.8,7.8 4.2,9.8 2.7,13.9 -1.8,4.7 -8.5,0.1 -10.1,-7 -1.2,-5.3 -0.1,-15.8 2.1,-19.4 1,-1.6 2,-3 2.2,-3 0.1,-0 0.1,1.8 -0.1,4z" android:strokeColor="#00000000"/>
 </vector>
