--- a/app/src/main/res/drawable/splash_image.xml
+++ b/app/src/main/res/drawable/splash_image.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/red_ec" />
+    <item android:drawable="@color/iconGray"
+        />
 
-    <item android:drawable="@drawable/ic_logo" android:gravity="center" />
+    <item
+        android:drawable="@drawable/chicken_logo"
+        android:gravity="center"
+        android:height="150dp"
+        android:width="150dp"
+        />
 
 </layer-list>
