--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="c1c1_gray">#c1c1c1</color>
     <color name="red_ec">#EC3939</color>
+    <color name ="iconGray">#413E3E</color>
 
 </resources>
