- Just more theme edits / changes for better user experience ( I hope )     - Added a new log out button on Account home navigation page ( at bottom ).
- IMPORTANT NOTICE:
    - Be aware, if you do not follow the basic guidelines for the current page format, your page will  crash. The crash would most likely be caused by if you did not add this line of code
        setTheme(R.style.Theme_Carolina_Coffee);
- IMPORTANT NOTICE:

--- a/app/src/main/res/layout/activity_app_settings_page.xml
+++ b/app/src/main/res/layout/activity_app_settings_page.xml
@@ -10,15 +10,16 @@
 
     <TextView
         android:id="@+id/settingsTopBox"
-        android:layout_width="417dp"
+        android:layout_width="match_parent"
         android:layout_height="96dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/top_page_red_curved_sides"
         android:fontFamily="@font/sofia_regular"
         android:text="Settings"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,9 +38,9 @@
 
     <TextView
         android:id="@+id/topMessage2"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="26dp"
-        android:background="@drawable/profile_page_top_curved_box"
+        android:background="@drawable/top_page_red_curved"
         android:fontFamily="@font/sofia_regular"
         android:text="Change your app settings."
         android:textAlignment="center"
