--- a/app/src/main/res/layout/activity_customer_support_page.xml
+++ b/app/src/main/res/layout/activity_customer_support_page.xml
@@ -10,9 +10,9 @@
 
     <TextView
         android:id="@+id/supportTopBox"
-        android:layout_width="417dp"
+        android:layout_width="match_parent"
         android:layout_height="96dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/top_page_red_curved_sides"
         android:fontFamily="@font/sofia_regular"
         android:text="Support"
         android:textAlignment="center"
@@ -37,9 +37,9 @@
 
     <TextView
         android:id="@+id/topMessage2"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="26dp"
-        android:background="@drawable/profile_page_top_curved_box"
+        android:background="@drawable/top_page_red_curved"
         android:fontFamily="@font/sofia_regular"
         android:text="Contact us!"
         android:textAlignment="center"
