--- a/app/src/main/res/layout/activity_defaultpage_examplecode.xml
+++ b/app/src/main/res/layout/activity_defaultpage_examplecode.xml
@@ -10,9 +10,9 @@
 
     <TextView
         android:id="@+id/historyTopBox"
-        android:layout_width="417dp"
+        android:layout_width="match_parent"
         android:layout_height="96dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/top_page_red_curved_sides"
         android:fontFamily="@font/sofia_regular"
         android:text="History"
         android:textAlignment="center"
@@ -24,8 +24,8 @@
 
     <TextView
         android:id="@+id/backArrow2"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/left_arrow"
@@ -36,9 +36,9 @@
 
     <TextView
         android:id="@+id/topMessage2"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="26dp"
-        android:background="@drawable/profile_page_top_curved_box"
+        android:background="@drawable/top_page_red_curved"
         android:fontFamily="@font/sofia_regular"
         android:text="Your History and Receipts"
         android:textAlignment="center"
