--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,159 @@
     tools:context=".MainActivity">
 
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="47dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/account_icon"
-        android:foreground="@drawable/ripple_red"
+    <TextView
+        android:id="@+id/homeTopBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/top_page_red_curved_sides"
+        android:fontFamily="@font/sofia_regular"
+        android:text="Welcome"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.909"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:onClick="profilePage" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/topMessage3"
+        android:layout_width="match_parent"
+        android:layout_height="26dp"
+        android:background="@drawable/top_page_red_curved"
+        android:fontFamily="@font/sofia_regular"
+        android:text="To the Carolina Club"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/homeTopBox" />
+
+
+    <TextView
+        android:id="@+id/top_blank_inbox_saved"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topMessage3" />
+
+    <ScrollView
+        android:id="@+id/scroll_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top_blank_inbox_saved"
+        tools:ignore="MissingConstraints">
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cvLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/profile_button"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="100dp"
+                android:background="@drawable/settings_page_all_gray_curved_corners"
+                android:fontFamily="@font/sofia_regular"
+                android:foreground="@drawable/ripple"
+                android:letterSpacing="0.5"
+                android:onClick="profileButton"
+                android:paddingStart="20dp"
+                android:paddingTop="5dp"
+                android:text="Test 1"
+                android:textAlignment="viewStart"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                app:backgroundTint="@color/c1c1_gray"
+                app:itemRippleColor="@color/black"
+                app:layout_constraintEnd_toEndOf="@+id/cvLayout"
+                app:layout_constraintHorizontal_bias="0.506"
+                app:layout_constraintStart_toStartOf="@+id/cvLayout"
+                app:layout_constraintTop_toTopOf="@+id/cvLayout" />
+
+            <Button
+                android:id="@+id/change_password_button"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/settings_page_all_gray_curved_corners"
+                android:fontFamily="@font/sofia_regular"
+                android:foreground="@drawable/ripple"
+                android:letterSpacing="0.5"
+                android:onClick="changePasswordButton"
+                android:paddingStart="20dp"
+                android:paddingTop="5dp"
+                android:text="Test 2"
+                android:textAlignment="viewStart"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                app:backgroundTint="@color/c1c1_gray"
+                app:itemRippleColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.495"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/profile_button" />
+
+            <Button
+                android:id="@+id/setting_button"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="550dp"
+                android:layout_marginBottom="32dp"
+                android:background="@drawable/settings_page_all_gray_curved_corners"
+                android:fontFamily="@font/sofia_regular"
+                android:foreground="@drawable/ripple"
+                android:letterSpacing="0.5"
+                android:onClick="appSettingsPageButton"
+                android:paddingStart="20dp"
+                android:paddingTop="5dp"
+                android:text="Test 3"
+                android:textAlignment="viewStart"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                app:backgroundTint="@color/c1c1_gray"
+                app:itemRippleColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.603"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/customer_support_button"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <Button
+                android:id="@+id/customer_support_button"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/settings_page_all_gray_curved_corners"
+                android:fontFamily="@font/sofia_regular"
+                android:foreground="@drawable/ripple"
+                android:letterSpacing="0.5"
+                android:onClick="customerSupportButton"
+                android:paddingStart="20dp"
+                android:paddingTop="5dp"
+                android:text="Test 4"
+                android:textAlignment="viewStart"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                app:backgroundTint="@color/c1c1_gray"
+                app:itemRippleColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.495"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/change_password_button" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
