--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -146,10 +146,10 @@
 
     <TextView
         android:id="@+id/profileTextTop"
-        android:layout_width="417dp"
+        android:layout_width="match_parent"
         android:layout_height="96dp"
         android:layout_marginEnd="-1dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/top_page_red_curved_sides"
         android:fontFamily="@font/sofia_regular"
         android:text="Profile"
         android:textAlignment="center"
@@ -163,10 +163,10 @@
 
     <TextView
         android:id="@+id/TopMessage2"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="26dp"
         android:layout_marginEnd="-1dp"
-        android:background="@drawable/profile_page_top_curved_box"
+        android:background="@drawable/top_page_red_curved"
         android:fontFamily="@font/sofia_regular"
         android:letterSpacing="0.25"
         android:text="Your Personal Information"
@@ -174,7 +174,7 @@
         android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.514"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profileTextTop" />
 
